Add rswag definitions for new proxy endpoints.
